# scoutVISION-Sandbox

./: .env.example  .gitignore  .pre-commit-config.yaml  Procfile  README.md  TODO.md  app.py  database.py  models.py  pyproject.toml  railway.json  settings.py
alembic/: env.py
alembic/versions/: 202605200001_create_prompt_runs.py  202605200002_add_users.py
lib/: __init__.py  artifacts.py  auth.py  gemini_client.py  progress.py  prompt_runs.py  users.py  video.py
prompts/: boilerplate.txt
templates/: admin_users.html  index.html  login.html  result.html  signup.html
