[project]
name = "scoutvision-sandbox"
version = "0.1.0"
description = "Small tester site for iterating on Gemini prompts against recruit highlight reels."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.18.4,<2.0.0",
    "flask>=3.1.0,<4.0.0",
    "google-genai>=1.73.1,<2.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "opencv-python-headless>=4.12.0.88,<5.0.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "sqlalchemy>=2.0.49,<3.0.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.13"
pre-commit = "^4.6.0"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "D",
]
ignore = [
    "D203",
    "D213",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
